<resources>
    <string name="app_name">Ecommerce</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="e_commerce">E-Market</string>
    <string name="search">Search</string>
    <string name="filters">Filters:</string>
    <string name="select_filter">Select Fılter</string>
    <string name="name">Name</string>
    <string name="add_to_cart">add to cart</string>
    <string name="back">Back</string>
    <string name="image_detail">Image Detail</string>
    <string name="description">Description</string>
    <string name="price">Price:</string>
    <string name="favourite_image">Favourite Image</string>
    <string name="detail">Detail</string>
    <string name="product">product</string>
    <string name="decrease_operator">-</string>
    <string name="increase_operator">+</string>
    <string name="one">1</string>
    <string name="total">Total:</string>
    <string name="complete">Complete</string>
    <string name="home">home</string>
    <string name="cart">cart</string>
    <string name="favourite">favourite</string>
    <string name="filter">Filter</string>
    <string name="old_to_new">Old to new</string>
    <string name="new_to_old">New to old</string>
    <string name="price_high_to_low">Price High to Low</string>
    <string name="price_low_to_high">Price Low To High</string>
    <string name="sort_by">Sort By</string>
    <string name="brand">Brand</string>
    <string name="model">Model</string>
    <string name="primary">primary</string>
    <string name="lamborghini">Lamborghini</string>
    <string name="ferrari">Ferrari</string>
    <string name="volkswagen">Volkswagen</string>
    <string name="cts">CTS</string>
    <string name="roadster">Roadster</string>
    <string name="jetta">Jetta</string>
    <string name="close">Close</string>
    <string name="no_products_available">No products available</string>
</resources>